Feat/met 4976 upgrade to spring boot 3 and framework 6 (#663)
* Upgrade spring-security-crypto 5.5.0 -> 5.8.10

* Upgrade spring
spring.boot 2.7.18 -> 3.2.3
spring-framework 5.3.7 -> 6.1.4
Use spring-framework-bom to control version compatibility
This commit will not compile, jakarta migration pending.

* Update all conflicts

* Fix slf4j and hibernate loading

* Update from log4j-slf4j-impl to log4j-slf4j2-impl

* Relocate group org.hibernate to org.hibernate.orm

* Update vulnerable com.jayway.jsonpath:json-path
2.5.0 -> 2.9.0

* Update vulnerable commons-compress dependency

* Fix failing test

* MET-4976 Upgrade flapdoodle embed mongo 4.10.1 -> 4.12.2

* MET-4976 Cleanup

* MET-4976 Update eclood version and cover URI not absolute case

* MET-4976 Migrate to new awaitility library

* Upgrade corelib to 2.16.8

Fix compile failure

* Upgrade springdoc-openapi

* Cleanup WebMvcConfigurer

* Fix conflict with corelib-storage